--- a/app/src/main/res/layout/activity_user_space.xml
+++ b/app/src/main/res/layout/activity_user_space.xml
@@ -41,7 +41,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="20dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/ordinaryText"
                 android:textSize="20sp" />
 
             <ImageView
@@ -90,9 +90,10 @@
                         android:id="@+id/tv_fans"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:text="-"
+                        android:textColor="@color/ordinaryText"
+                        android:textSize="18sp"
+                        tools:ignore="HardcodedText" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -111,9 +112,10 @@
                         android:id="@+id/tv_watching"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:text="-"
+                        android:textColor="@color/ordinaryText"
+                        android:textSize="18sp"
+                        tools:ignore="HardcodedText" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -132,9 +134,10 @@
                         android:id="@+id/tv_like"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                        android:text="-"
+                        android:textColor="@color/ordinaryText"
+                        android:textSize="18sp"
+                        tools:ignore="HardcodedText" />
 
                     <TextView
                         android:layout_width="wrap_content"
