--- a/app/src/main/res/layout/fragment_settings_layout.xml
+++ b/app/src/main/res/layout/fragment_settings_layout.xml
@@ -13,6 +13,36 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/ui_mod" />
+
+        <RadioGroup
+            android:id="@+id/rg_uiMod"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_night_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/night_no" />
+
+            <RadioButton
+                android:id="@+id/rb_night_yes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/night_yes" />
+
+            <RadioButton
+                android:id="@+id/rb_night_follow_system"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/follow_system" />
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/column" />
 
         <EditText
