--- a/app/src/main/res/layout-sw700dp/activity_main.xml
+++ b/app/src/main/res/layout-sw700dp/activity_main.xml
@@ -13,7 +13,7 @@
             android:id="@+id/nav_main"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
+            android:background="@color/background"
             android:theme="@style/AppTheme.Navigation"
             app:headerLayout="@layout/drawer_main_header"
             app:menu="@menu/main" />
