--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@android:color/white"
+            android:background="@color/background"
             android:theme="@style/AppTheme.Navigation"
             app:headerLayout="@layout/drawer_main_header"
             app:menu="@menu/main" />
