--- a/app/src/main/res/layout/drawer_main_header.xml
+++ b/app/src/main/res/layout/drawer_main_header.xml
@@ -14,7 +14,7 @@
             android:id="@+id/civ_face"
             android:layout_width="@dimen/face_size"
             android:layout_height="@dimen/face_size"
-            app:civ_border_color="@color/colorPrimaryDark"
+            app:civ_border_color="@color/ordinaryCivBorderColor"
             app:civ_border_width="2dp" />
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_below="@id/civ_face"
             android:layout_marginTop="5dp"
             android:text="@string/not_logged_in"
-            android:textColor="@android:color/black"
+            android:textColor="@color/ordinaryText"
             android:textSize="20sp" />
 
         <ImageView
