--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -53,7 +53,8 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="弹幕" />
+            android:text="弹幕"
+            android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/exo_position"
@@ -80,7 +81,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/danmaku" />
+            android:text="@string/danmaku"
+            android:textColor="@android:color/white" />
 
         <ImageButton
             android:id="@+id/ib_fullscreen"
