--- a/app/src/main/res/layout/layout_favorite_card_item.xml
+++ b/app/src/main/res/layout/layout_favorite_card_item.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@id/iv"
-                android:textColor="@android:color/black"
+                android:textColor="@color/ordinaryText"
                 android:textSize="15sp" />
 
             <TextView
