--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -26,7 +26,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/civ_face"
-            android:textColor="@android:color/black"
+            android:textColor="@color/ordinaryText"
             android:textSize="15sp" />
 
         <TextView
@@ -67,7 +67,7 @@
             android:layout_height="@dimen/face_size_small"
             android:layout_below="@id/iv"
             android:layout_marginTop="5dp"
-            app:civ_border_color="@color/colorPrimaryDark"
+            app:civ_border_color="@color/ordinaryCivBorderColor"
             app:civ_border_width="2dp" />
 
         <TextView
