--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -21,14 +21,7 @@
                 android:id="@+id/pv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/black" >
-
-                <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/pb_loading"/>
-            </com.google.android.exoplayer2.ui.PlayerView>
+                android:background="@android:color/black" />
 
             <master.flame.danmaku.ui.widget.DanmakuView
                 android:id="@+id/dv"
@@ -36,6 +29,22 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="70dp" />
 
+            <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
+
+            <ProgressBar
+                android:id="@+id/pb_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+            <FrameLayout
+                android:id="@+id/fl_pv_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </RelativeLayout>
 
