--- a/app/src/main/res/layout/fragment_play_intro.xml
+++ b/app/src/main/res/layout/fragment_play_intro.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="5dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/ordinaryText"
                 android:textIsSelectable="true"
                 android:textSize="18sp" />
 
