--- a/app/src/main/res/layout-sw700dp/activity_main.xml
+++ b/app/src/main/res/layout-sw700dp/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark" />
 
-        <FrameLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/fl_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
