--- a/app/src/main/res/layout-land/fragment_welcome_ad.xml
+++ b/app/src/main/res/layout-land/fragment_welcome_ad.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:text="@string/skip"
+                android:text="@string/keep"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="5dp"
                 android:textColor="@color/ordinaryText"
