--- a/app/src/main/res/layout-land/fragment_welcome_ad.xml
+++ b/app/src/main/res/layout-land/fragment_welcome_ad.xml
@@ -8,9 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -19,7 +20,8 @@
                 android:id="@+id/iv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:ignore="ContentDescription" />
 
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/pv"
@@ -27,7 +29,17 @@
                 android:layout_height="match_parent"
                 android:visibility="invisible"
                 app:use_controller="false" />
-        </FrameLayout>
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/bg_text"
+                android:padding="5dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -44,7 +56,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                app:srcCompat="@mipmap/ic_launcher_round"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -97,9 +110,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:text="@string/keep"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="5dp"
+                android:text="@string/keep"
                 android:textColor="@color/ordinaryText"
                 app:layout_constraintEnd_toStartOf="@+id/btn_skip"
                 app:layout_constraintTop_toTopOf="parent" />
