--- a/app/src/main/res/layout/fragment_welcome_ad.xml
+++ b/app/src/main/res/layout/fragment_welcome_ad.xml
@@ -19,7 +19,8 @@
                 android:id="@+id/iv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:ignore="ContentDescription" />
 
             <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/pv"
@@ -46,11 +47,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@id/btn_skip"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@id/btn_skip"
                 android:text="@string/keep"
                 android:textColor="@color/ordinaryText" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/bg_text"
+                android:padding="5dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -65,7 +76,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="256dp"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                app:srcCompat="@mipmap/ic_launcher_round"
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -75,7 +87,8 @@
                 android:layout_marginStart="-180dp"
                 android:layout_toEndOf="@+id/imageView"
                 android:text="@string/app_name"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                tools:ignore="RelativeOverlap" />
 
             <TextView
                 android:id="@+id/tv_version"
