--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -3,16 +3,20 @@
     <Preference
         app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsUsersFragment"
         app:icon="@drawable/ic_account_circle"
+        app:key="users"
         app:title="@string/users" />
     <Preference
         app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsDisplayFragment"
+        app:key="display"
         app:title="@string/display" />
     <Preference
         app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsDownloadFragment"
         app:icon="@drawable/ic_dl"
+        app:key="download"
         app:title="@string/download" />
     <Preference
         app:fragment="com.duzhaokun123.bilibilihd.ui.settings.AboutFragment"
         app:icon="@drawable/ic_info"
+        app:key="about"
         app:title="@string/about" />
 </PreferenceScreen>
