--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -16,6 +16,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginTop="20dp"
+            android:contentDescription="@string/app_name"
             android:src="@mipmap/ic_launcher_round"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +91,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lighterGray" />
+                android:layout_height="1dp" />
 
             <RelativeLayout
                 android:id="@+id/rl_license"
@@ -111,8 +111,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lighterGray" />
+                android:layout_height="1dp" />
 
             <RelativeLayout
                 android:id="@+id/rl_projectHome"
@@ -140,8 +139,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/lighterGray" />
+                android:layout_height="1dp" />
 
         </LinearLayout>
 
