--- a/app/src/main/res/xml/settings_ads.xml
+++ b/app/src/main/res/xml/settings_ads.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+    <SwitchPreferenceCompat
+        app:defaultValue="true"
+        app:iconSpaceReserved="false"
+        app:key="allow_all_ads"
+        app:title="@string/allow_all_ads" />
     <CheckBoxPreference
         app:defaultValue="true"
         app:iconSpaceReserved="false"
