--- a/app/src/main/res/menu/play_activity.xml
+++ b/app/src/main/res/menu/play_activity.xml
@@ -22,4 +22,9 @@
         android:id="@+id/download"
         android:title="@string/download"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/add_to_history"
+        android:title="@string/add_to_history"
+        app:showAsAction="never" />
 </menu>
