--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -10,6 +10,11 @@
         app:key="display"
         app:title="@string/display" />
     <Preference
+        app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsPlayFragment"
+        app:icon="@drawable/ic_outline_play_circle"
+        app:key="play"
+        app:title="@string/play" />
+    <Preference
         app:fragment="com.duzhaokun123.bilibilihd.ui.settings.SettingsDanmakuFragment"
         app:key="danmaku"
         app:title="@string/danmaku" />
