修改提示样式

--- a/app/src/main/res/layout-land/fragment_welcome_ad.xml
+++ b/app/src/main/res/layout-land/fragment_welcome_ad.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/bg_text"
+                android:fitsSystemWindows="true"
                 android:padding="5dp"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
